--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     
     
-    <body>
+    <body data-spy="scroll" data-target=".navbar" data-offset="60">
         <section id="contact">
             <div class="container">
                 <div class="divider"></div>
