--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     
     
     <body data-spy="scroll" data-target=".navbar" data-offset="60">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#about">Moi</a></li>
+                        <li><a href="#skills">Compétences</a></li>
+                        <li><a href="#formation">Formations</a></li>
+                        <li><a href="#experience">Expériences</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#certificats">Certificats</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <section id="contact">
             <div class="container">
                 <div class="divider"></div>
