--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
                 </div>
             </div>
         </nav>
+         <section id="about" class="container-fluid">
+        <div class="col-xs-8 col-md-4 profile-picture">
+            <img src="images/monPortrait.jpg" alt="Pascal" class="img-circle">
+        </div>
+        <div class="heading">
+            <h1>Hello, c'est moi Pascal</h1>
+            <h3>Développeur Web </h3>
+
+            <a href="docs/cv.pdf" class="button1">Télécharger CV</a><br>
+
+
+        </div>
+
+
+    </section>
         <section id="contact">
             <div class="container">
                 <div class="divider"></div>
