--- a/index.html
+++ b/index.html
@@ -51,6 +51,155 @@
 
 
     </section>
+ <section id="skills">
+        <div class="blue-divider"></div>
+
+        <div class="heading">
+            <h2>Compétences</h2>
+
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 70%;">
+                            <h5>HTML 70%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 70%;">
+                            <h5>CSS 70%</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 60%;">
+                            <h5>PHP 60%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 60%;">
+                            <h5>JAVASCRIPT 60%</h5>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col-md-6">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 70%;">
+                            <h5>WORDPRESS 70%</h5>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </section> 
+    <!-- <section id="formation">
+        <div class="blue-divider"></div>
+        <div class="heading">
+            <h2>Formations</h2>
+        </div>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-sm-6">
+                    <div class="formation-block">
+                        <h5>2019-2022</h5>
+                        <span class="glyphicon glyphicon-education"></span>
+                        <a href="https://www.esecad.com/formation-web/integrateur-developpeur/programme.htm">
+                            <h3>ESECAD</h3>
+                        </a>
+
+                        <h4>Développeur intégrateur web</h4>
+
+                        <div class="blue-divider"></div>
+
+                        <h6>Gestion de projet</h6>
+                        <ul>
+                            <li> Connaitre les bases des langages du web</li>
+                            <li>concevoir un site efficace</li>
+                            <li> Mettre en production un site web</li>
+                        </ul>
+                        <h6>HTML-CSS</h6>
+                        <ul>
+                            <li>HTML-CSS – Niveau Initiation</li>
+                            <li>HTML-CSS – Niveau Perfectionnement</li>
+                            <li>HTML-CSS – Niveau Avancé</li>
+                            <li>HTML-CSS – Niveau Expert</li>
+                            <li>Newsletter</li>
+                        </ul>
+                        <h6>Javascript</h6>
+                        <ul>
+                            <li>Niveau Initiation</li>
+                            <li>Niveau Perfectionnement</li>
+                        </ul>
+                        <h6>Optimisation d’un site web</h6>
+                        <ul>
+                            <li>Maîtriser les fondamentaux du référencement naturel SEO</li>
+                        </ul>
+                        <h6>Conception graphique</h6>
+                        <ul>
+                            <li>Maîtriser les fondamentaux de Photoshop</li>
+                        </ul>
+                        <h6>PHP – MYSQL</h6>
+                        <ul>
+                            <li>PHP – Niveau Initiation</li>
+                            <li>PHP – Niveau Perfectionnement</li>
+                            <li>PHP – Niveau Avancé</li>
+                            <li>PHP – Niveau Expert</li>
+                        </ul>
+                        <h6>WordPress</h6>
+                        <ul>
+                            <li>Créer un site WordPress</li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="formation-block">
+                        <h5>1992-1993</h5>
+                        <span class="glyphicon glyphicon-education"></span>
+                        <h3>AFPA</h3>
+                        <h4>Technicien de maintenance en systémes automatisés</h4>
+                        <h6>Diplôme RNCP de niveau IV</h6>
+                        <div class="blue-divider"></div>
+
+                        <ul>
+                            <li>Pneumatique</li>
+                            <li>Electricité</li>
+                            <li>Automate programmable</li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="formation-block">
+                        <h5>1983</h5>
+                        <span class="glyphicon glyphicon-education"></span>
+                        <h3>Lycée</h3>
+                        <h4>Terminal F3 Electrotechnique</h4>
+
+                        <div class="blue-divider"></div>
+                        <p>
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
         <section id="contact">
             <div class="container">
                 <div class="divider"></div>
