ajout des autres sections

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </section> 
-    <!-- <section id="formation">
+     <section id="formation">
         <div class="blue-divider"></div>
         <div class="heading">
             <h2>Formations</h2>
@@ -198,7 +198,224 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> 
+
+ <section id="experience">
+        <div class="container">
+            <div class="white-divider"></div>
+            <div class="heading">
+                <h2>Expériences professionnelles</h2>
+            </div>
+            <ul class="timeline">
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>OUEST COMPOSITE</h3>
+                                <h4>Colleur</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2007-2020</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Formateur, colleur: assemblage d’inserts
+                                    métallique sur des pièces en matériaux
+                                    composites</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container-inverted">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>S.G.A</h3>
+                                <h4>Opérateur de sùreté aéroportuaire</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2002-2007</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Contrôle des passagers ,des bagages de soutes</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>S.E.S</h3>
+                                <h4>Technicien alarme</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2000-2002</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Installation et maintenance de systèmes d’alarme
+                                    filaires et radios.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container-inverted">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>CORNOUAILLE DISTRIBUTION</h3>
+                                <h4>Gestionnaire d'un parc de distributeurs de boissons</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 1999-2000</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Entretien et remplissage d’un parc de
+                                    distributeurs automatiques de boissons</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>ARMORELEC</h3>
+                                <h4>Galvanoplaste</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 1996-1999</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Opérateur sur ligne de production, montage,
+                                    contrôle et suivi qualité.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container-inverted">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>MATRA</h3>
+                                <h4>Opérateur de production ligne FUJI (cms) </h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 1993-1995</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Approvisionnement, montage, contrôle qualité.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                    <div class="timeline-panel-container">
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h3>I.B.M</h3>
+                                <h4>Leader technique de ligne</h4>
+                                <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 1986-1991</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Responsable du secteur de la gravure, suivi de
+                                    production, maintenance de niveau 1.Travail en salle blanche</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+        <div>
+
+        </div>
+    </section> 
+
+     <section id="portfolio">
+        <div class="container">
+            <div class="white-divider"></div>
+            <div class="heading">
+                <h2>Portfolio</h2>
+            </div>
+            <div class="col-sm-6">
+                <div class="portfolio-block">
+                    <h3>Laravel</h3>
+                    <div class="blue-divider"></div>
+                    <h5>Projets</h5>
+                    <p> <a href="http://kongodanialaravel.apmn7305.odns.fr/public/">Projet 1 : </a> Remake d'un site
+                        WordPress </p>
+                    <p> <a href="./videos/demo-projet1.mp4"> Vidéo projet 1 : </a> Démo du mode admin</p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="portfolio-block">
+                    <h3>WordPress</h3>
+                    <div class="blue-divider"></div>
+                    <h5>Projets</h5>
+                    <p> <a href="https://windsurf.pascaldasse.fr/">Projet 1 :</a> Site de démo. </p>
+                    <p> <a href="https://www.le-divin.com"> Projet 2 :</a> Site en ligne, réalisé à partir d'un dossier
+                        powerpoint. </p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="portfolio-block">
+                    <h3>PHP</h3>
+                    <div class="blue-divider"></div>
+                    <h5>Projets</h5>
+                    <p> <a href="https://stat.pascaldasse.fr/">Projet 1 :</a> Génération de contenus et statistique CRUD
+                    </p>
+
+                </div>
+            </div>
+
+        </div>
+    </section> 
+   
+    
+     <section id="certificats">
+        <div class="blue-divider"></div>
+        <div class="container">
+            <div class="heading">
+                <h2>Certificats</h2>
+            </div>
+            <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+                
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#myCarousel" data-slide-to="5"></li>
+                    <li data-target="#myCarousel" data-slide-to="6"></li>
+                    <li data-target="#myCarousel" data-slide-to="7"></li>
+
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="images/html_css.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/commande_terminal.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/git.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/javascript.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/jquery.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/web.jpg" alt="html_css">
+                    </div>
+                    <div class="item ">
+                        <img src="images/udemy_javascript.jpg" alt="udemy_javascript">
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev" role="button">
+                    <span class="glyphicon glyphicon-chevron-left"></span></a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next" role="button">
+                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+    </section> 
 
         <section id="contact">
             <div class="container">
